--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   postgres:
-    container_name: postgres
+    container_name: postgres_pinkgreen_mkt
     image: postgres:13.2
     ports:
       - "5432:5432"
