--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,14 @@
 spring:
-  postgres:
+  jpa:
+    database: POSTGRESQL
+    hibernate:
+      ddl-auto: create
+  database:
+    driverClassName: org.postgresql.Driver
+  datasource:
     url: jdbc:postgresql://localhost:5432/pinkgreen_mkt
-    usename: local
+    username: local
     password: local
+    hikari:
+      connectionTimeout: 20000
+      maximumPoolSize: 5
