create listener to receiver order to process payment

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,7 +22,5 @@ spring:
       bindings:
         process-order-payment-output:
           destination: process-order-payment
-        output:
-          destination: simple-message
-        input:
-          destination: simple-message
+        process-order-payment-input:
+          destination: process-order-payment
