--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,3 +17,11 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+  keycloak:
+    container_name: keycloak_pinkgreen_mkt
+    image: quay.io/keycloak/keycloak:13.0.0
+    environment:
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=admin
+    ports:
+      - 8180:8080
