--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,18 +15,24 @@ spring:
     username: guest
     password: guest
   cloud:
+    function:
+      definition: processOrderPaymentSupplier;processOrderPaymentConsumer
     stream:
       rabbit:
         bindings:
-          process-order-payment-output:
+          processOrderPaymentSupplier-out-0:
             producer.routing-key-expression: '"process-order-payment"'
-          process-order-payment-input:
+          processOrderPaymentConsumer-in-0:
             consumer.bindingRoutingKey: process-order-payment
       bindings:
-        process-order-payment-output:
+        processOrderPaymentSupplier-out-0:
           destination: order_events
-        process-order-payment-input:
+          binder: rabbit
+          contentType: application/json
+        processOrderPaymentConsumer-in-0:
           destination: order_events
+          binder: rabbit
+          contentType: application/json
           group: process-order-payment.pinkgreen
 
 keycloak:
