--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,30 +1,24 @@
+server:
+  port: 8181
+
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/pinkgreen_mkt
-    username: local
-    password: local
-    hikari:
-      connectionTimeout: 20000
-      maximumPoolSize: 5
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+    host: ${RABBITMQ_HOST}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USER}
+    password: ${RABBITMQ_PASSWORD}
   cloud:
-    function:
-      definition: processOrderPaymentSupplier;processOrderPaymentConsumer
+    function.definition: processOrderPaymentSupplier;processOrderPaymentConsumer
     stream:
-      rabbit:
-        bindings:
-          processOrderPaymentSupplier-out-0:
-            producer.routing-key-expression: '"process-order-payment"'
-          processOrderPaymentConsumer-in-0:
-            consumer.bindingRoutingKey: process-order-payment
+      rabbit.bindings:
+        processOrderPaymentSupplier-out-0:
+          producer.routing-key-expression: '"process-order-payment"'
+        processOrderPaymentConsumer-in-0:
+          consumer.bindingRoutingKey: process-order-payment
       bindings:
         processOrderPaymentSupplier-out-0:
           destination: order_events
@@ -37,10 +31,10 @@ spring:
           group: process-order-payment.pinkgreen
 
 keycloak:
-  realm: Pinkgreen-mkt
-  auth-server-url: http://localhost:8181/auth
+  realm: ${KEYCLOAK_REALM}
+  auth-server-url: ${KEYCLOAK_URL}
+  resource: ${KEYCLOAK_CLIENT}
+  credentials.secret: ${KEYCLOAK_SECRET}
   ssl-required: external
-  resource: pinkgreen-backend
-  credentials.secret: 4c1d2c2c-1bad-4b4d-8880-8f45c0e86279
   use-resource-role-mappings: true
   bearer-only: true
