--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,11 @@ server:
   port: 8181
 
 spring:
+  flyway:
+    locations: classpath:/db/migrations
+    url: ${POSTGRES_URL}
+    user: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
   datasource:
     url: ${POSTGRES_URL}
     username: ${POSTGRES_USER}
