--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,4 +1,8 @@
 spring:
+  security.oauth2.resourceserver.jwt:
+    issuer-uri: http://localhost:8080/realms/pinkgreen-mkt
+    jwk-set-uri: http://localhost:8080/realms/pinkgreen-mkt/protocol/openid-connect/certs
+
   jpa.show-sql: true
   flyway:
     url: jdbc:postgresql://localhost:5432/pinkgreen_mkt
@@ -16,12 +20,6 @@ spring:
     port: 5672
     username: guest
     password: guest
-
-keycloak:
-  realm: Pinkgreen-mkt
-  auth-server-url: http://localhost:8080/auth
-  resource: pinkgreen-backend
-  credentials.secret: cb6f474d-5a8a-44f7-b659-34e0fa8f95a0
 
 payment:
   url: http://localhost:4000
