--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -21,5 +21,6 @@ spring:
     username: guest
     password: guest
 
-payment:
-  url: http://localhost:4000
+payment.url: http://localhost:4000
+
+iam.url: http://localhost:8080/admin/realms/pinkgreen-mkt
